--- a/arch/arm/configs/trebon_defconfig
+++ b/arch/arm/configs/trebon_defconfig
@@ -16,7 +16,7 @@ CONFIG_LOCKDEP_SUPPORT=y
 CONFIG_TRACE_IRQFLAGS_SUPPORT=y
 CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_GENERIC_IRQ_PROBE=y
-CONFIG_ARM_TICKET_LOCKS=y
+CONFIG_GENERIC_LOCKBREAK=y
 CONFIG_RWSEM_GENERIC_SPINLOCK=y
 CONFIG_ARCH_HAS_CPUFREQ=y
 CONFIG_ARCH_HAS_CPU_IDLE_WAIT=y
@@ -327,7 +327,7 @@ CONFIG_ARCH_MSM7X27=y
 # CONFIG_ARCH_MSM8226 is not set
 # CONFIG_ARCH_FSM9XXX is not set
 # CONFIG_ARCH_MSM9615 is not set
-CONFIG_ARCH_MSM8625=y
+# CONFIG_ARCH_MSM8625 is not set
 # CONFIG_ARCH_MSM9625 is not set
 # CONFIG_MSM_SOC_REV_NONE is not set
 CONFIG_MSM_SOC_REV_A=y
@@ -349,17 +349,11 @@ CONFIG_MACH_TREBON=y
 CONFIG_MACH_MSM7X27A_RUMI3=y
 CONFIG_MACH_MSM7X27A_SURF=y
 CONFIG_MACH_MSM7X27A_FFA=y
-CONFIG_MACH_MSM7625A_SURF=y
-CONFIG_MACH_MSM7625A_FFA=y
-CONFIG_MACH_MSM7627A_QRD1=y
-CONFIG_MACH_MSM7627A_QRD3=y
-CONFIG_MACH_MSM7627A_EVB=y
-CONFIG_MACH_MSM8625_RUMI3=y
-CONFIG_MACH_MSM8625_SURF=y
-CONFIG_MACH_MSM8625_FFA=y
-CONFIG_MACH_MSM8625_EVB=y
-CONFIG_MACH_MSM8625_QRD7=y
-CONFIG_MACH_MSM8625_EVT=y
+# CONFIG_MACH_MSM7625A_SURF is not set
+# CONFIG_MACH_MSM7625A_FFA is not set
+# CONFIG_MACH_MSM7627A_QRD1 is not set
+# CONFIG_MACH_MSM7627A_QRD3 is not set
+# CONFIG_MACH_MSM7627A_EVB is not set
 # CONFIG_MACH_MSM_DUMMY is not set
 
 #
@@ -494,7 +488,6 @@ CONFIG_MSM_ADSP_USE_PMEM=y
 # CONFIG_MSM_RTB is not set
 # CONFIG_MSM_EBI_ERP is not set
 # CONFIG_MSM_CPR is not set
-# CONFIG_MSM_VP_REGULATOR is not set
 # CONFIG_MSM_CACHE_DUMP is not set
 # CONFIG_MSM_HSIC_SYSMON is not set
 # CONFIG_MSM_CPU_PWRCTL is not set
@@ -672,9 +665,9 @@ CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -2203,7 +2196,7 @@ CONFIG_S5K4ECGX=y
 # CONFIG_VB6801 is not set
 CONFIG_MSM_CAMERA_FLASH=y
 CONFIG_MSM_CAMERA_SENSOR=y
-CONFIG_MSM_ACTUATOR=y
+# CONFIG_MSM_ACTUATOR is not set
 # CONFIG_MSM_EEPROM is not set
 # CONFIG_IMX074_EEPROM is not set
 # CONFIG_IMX091_EEPROM is not set
