--- a/drivers/video/msm/Makefile
+++ b/drivers/video/msm/Makefile
@@ -178,7 +178,8 @@ obj-$(CONFIG_FB_MSM_LCDC_TRULY_HVGA_IPS3P2335) += lcdc_truly_ips3p2335.o
 ##################################
 # Lcd driver for Samsung Project #
 ##################################
-obj-$(CONFIG_FB_MSM_LCDC_TREBON_HVGA) += lcdc_trebon.o lcdc_auo_hvga.o lcdc_backlight_ic.o
+obj-$(CONFIG_FB_MSM_LCDC_TREBON_HVGA) += lcdc_trebon.o lcdc_backlight_ic.o 
+obj-$(CONFIG_FB_MSM_LCDC_TREBON_HVGA) += lcdc_s6d16a0x_trebon.o lcdc_backlight_ic.o 
 
 
 obj-$(CONFIG_FB_MSM_TVOUT) += tvout_msm.o
