--- a/arch/arm/configs/trebon_defconfig
+++ b/arch/arm/configs/trebon_defconfig
@@ -114,9 +114,9 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
-CONFIG_CC_OPTIMIZE_DEFAULT=y
+# CONFIG_CC_OPTIMIZE_DEFAULT is not set
 # CONFIG_CC_OPTIMIZE_ALOT is not set
-# CONFIG_CC_OPTIMIZE_FAST is not set
+CONFIG_CC_OPTIMIZE_FAST=y
 # CONFIG_CCACHE is not set
 CONFIG_LINARO=y
 CONFIG_SYSCTL=y
