--- a/arch/arm/configs/trebon_defconfig
+++ b/arch/arm/configs/trebon_defconfig
@@ -114,9 +114,9 @@ CONFIG_RD_GZIP=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
-# CONFIG_CC_OPTIMIZE_DEFAULT is not set
+CONFIG_CC_OPTIMIZE_DEFAULT=y
 # CONFIG_CC_OPTIMIZE_ALOT is not set
-CONFIG_CC_OPTIMIZE_FAST=y
+# CONFIG_CC_OPTIMIZE_FAST is not set
 # CONFIG_CCACHE is not set
 CONFIG_LINARO=y
 CONFIG_SYSCTL=y
@@ -360,16 +360,6 @@ CONFIG_MACH_MSM7X27A_FFA=y
 # CONFIG_MACH_MSM7627A_QRD3 is not set
 # CONFIG_MACH_MSM7627A_EVB is not set
 # CONFIG_MACH_MSM_DUMMY is not set
-
-#
-# LGE Board Selection
-#
-CONFIG_BOARD_HEADER_FILE=""
-# CONFIG_MACH_LGE_DUMMY is not set
-
-#
-# LGE Specific Patches
-#
 CONFIG_MACH_TREBON_HWREV=0x0
 CONFIG_BQ27425_FUEL_GAUGE=y
 # CONFIG_MSM_STACKED_MEMORY is not set
