--- a/init/Kconfig
+++ b/init/Kconfig
@@ -939,45 +939,11 @@ source "usr/Kconfig"
 
 endif
 
-choice
-	prompt "Optimization level (-Os, -O2, -O3)"
-	default CC_OPTIMIZE_DEFAULT
-
 config CC_OPTIMIZE_FOR_SIZE
-	bool "Use -Os"
+	bool "Optimize for size"
 	help
-	  Enabling this option will pass "-Os" instead of "-O2" or "-O3" to gcc
-	  resulting in a smaller, less optimized kernel.
-
-config CC_OPTIMIZE_DEFAULT
-        bool "Use -O2"
-        help
-         Enabling this option will pass "-O2" instead of "-Os" or "-O3" to gcc
-         resulting in a normal sized kernel, slightly optimized.
-
-config CC_OPTIMIZE_ALOT
-        bool "Use -O3"
-        help
-          Enabling this option will pass "-O3" instead of "-Os" or "-O2" to gcc
-          resulting in a large sized kernel, fully optimized.
-
-config CC_OPTIMIZE_FAST
-         bool "Use -Ofast"
-         help
-         Enabling this option will pass "-Ofast" instead of "-Os" or "-O2" or "-O3" to gcc
-         resulting in a large sized kernel, speed optimized.
-
-endchoice
-
-config CCACHE
-         bool "Use CCACHE with gcc"
-         help
-           Enabling this option will use ccache when compiling.
-
-config LINARO
-         bool "Use Linaro optimizations"
-         help
-           Enabling this option will use Linaro optimizations.
+	  Enabling this option will pass "-Os" instead of "-O2" to gcc
+	  resulting in a smaller kernel.
 
 config SYSCTL
 	bool
