add news setting flash led by SpeedModTeam

--- a/drivers/media/video/msm/Kconfig
+++ b/drivers/media/video/msm/Kconfig
@@ -172,8 +172,8 @@ config DW9712_ACT
 
 config MSM_CAMERA_FLASH_SC628A
 	bool "Qualcomm MSM camera sc628a flash support"
-	depends on MSM_CAMERA_LEGACY
-	default y
+	depends on MSM_CAMERA
+	default n
 	---help---
 	  Enable support for LED flash for msm camera.
 	  It is a samtech charge pump flash driver and it
