--- a/drivers/media/video/msm/Makefile
+++ b/drivers/media/video/msm/Makefile
@@ -20,13 +20,17 @@ else
   obj-$(CONFIG_MSM_CAMERA) += msm_camera.o
 endif
 obj-$(CONFIG_MSM_CAMERA) += msm_axi_qos.o gemini/
+ifeq ($(CONFIG_MSM_CAMERA),y)
 obj-$(CONFIG_MSM_CAMERA_FLASH) += flash.o
+else
 obj-$(CONFIG_MSM_CAMERA_FLASH_SC628A) += flash_sc628a.o
 obj-$(CONFIG_ARCH_MSM_ARM11) += msm_vfe7x.o
 ifeq ($(CONFIG_MSM_CAMERA_V4L2),y)
   obj-$(CONFIG_ARCH_MSM7X27A) += msm_vfe7x27a_v4l2.o
 else
+ifeq ($(CONFIG_MSM_CAMERA),y)
   obj-$(CONFIG_ARCH_MSM7X27A) += msm_vfe7x27a.o
+endif
 endif
 obj-$(CONFIG_ARCH_QSD8X50) += msm_vfe8x.o msm_vfe8x_proc.o
 ifeq ($(CONFIG_MSM_CAMERA_V4L2),y)
