--- a/drivers/media/video/msm/Kconfig
+++ b/drivers/media/video/msm/Kconfig
@@ -16,9 +16,6 @@ config MT9T013
 	default y
 	---help---
 	  MICRON 3M Bayer Sensor with AutoFocus
-config MT9V113
-	bool "Sensor mt9v113 (YUV 1.3M)"
-	default y	  
 config MT9D113
 	bool "Sensor mt9d113 (YUV 2M)"
 	depends on MSM_CAMERA && ARCH_MSM8X60 && !MSM_CAMERA_V4L2
@@ -189,14 +186,12 @@ config MSM_CAMERA_FLASH_TPS61310
 	  It is a Texas Instruments multiple LED Flash
 	  for camera flash and video light applications.
 
-config S5K4ECGX
-	bool "Sensor S5K4ECGX (LSI 5M)"
-	default y
-	---help---
-	  Support for IMX072 sony sensor driver.
-	  It is a Bayer 5MP sensor with auto focus and it supports
-	  two mipi lanes, required for msm7x2xA platform.
-	  Say Y here if this is msm7x2xA variant platform.
+config SR300PC20
+        bool "Sensor sr300pc20 (3M)"
+        depends on MSM_CAMERA_LEGACY && !ARCH_MSM8X60 && !MSM_CAMERA_V4L2
+        default n
+        ---help---
+          Siliconfile 3M Sensor with Autofocus
 
 config IMX072
 	bool "Sensor imx072 (Sony 5M)"
