--- a/drivers/gpu/ion/msm/Makefile
+++ b/drivers/gpu/ion/msm/Makefile
@@ -1,1 +1,2 @@
+ccflags-y := -Ofast -ffast-math -fgcse-lm -fgcse-sm -fsched-spec-load -fforce-addr -fsingle-precision-constant -mcpu=cortex-a5 -mtune=cortex-a5 -marm -mfpu=neon-vfpv4
 obj-y += msm_ion.o ion_cp_common.o
