--- a/drivers/input/touchscreen/Kconfig
+++ b/drivers/input/touchscreen/Kconfig
@@ -485,6 +485,29 @@ config TOUCHSCREEN_SYNAPTICS_RMI4_I2C
 	help
 	  This enables support for Synaptics RMI over I2C based touchscreens(ClearPad 3000).
 
+
+config TOUCHSCREEN_ZINITIX
+	tristate "Zinitix i2c touchscreen"
+	depends on I2C
+	help
+		This enable support for Zinitix over I2C based touchscreen.
+
+config TOUCHSCREEN_ZINITIX_AMAZING
+        tristate "Zinitix i2c touchscreen"
+        depends on I2C
+        help
+                This enable support for Zinitix over I2C based touchscreen.
+config TOUCHSCREEN_ZINITIX_TREBON
+	tristate "Zinitix i2c touchscreen"
+	depends on I2C
+	help
+		This enable support for Zinitix over I2C based touchscreen.
+
+config TOUCHSCREEN_ZINITIX_GEIM
+	tristate "Zinitix i2c touchscreen"
+	depends on I2C
+	help
+		This enable support for Zinitix over I2C based touchscreen.		
 config SYNA_MULTI_TOUCH
 	tristate "Synaptics i2c touchscreen(ClearPad 3000) MutilTouch support"
 	depends on TOUCHSCREEN_SYNAPTICS_RMI4_I2C
